@@ -1,7 +1,11 @@
 August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
-	* Mines and beartraps work well with the new system.
+	* Bug in poisoned fixed
 
+	
+August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Mines and beartraps work well with the new system.
 
 August 4 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
